fix for dark mode/themes and small screen size

--- a/block-system-2.0/dark_crystal/character/style.css
+++ b/block-system-2.0/dark_crystal/character/style.css
@@ -23,6 +23,7 @@
    background-size: contain;
    box-shadow: 0px 0px 15px 1px rgba(43,  32,  28,  0.6) ;
    padding: 5px 5px;}
+table { border:none }
 div,  p {
    font-size: 20px;
    font-family: var(--BodyFont) ;
@@ -31,34 +32,39 @@ div,  p {
    background: url(https://www.worldanvil.com/uploads/images/2e52f2f1c70a7aa2f298a282aa90e9bb.webp) center center no-repeat!important;
    height: 200px;
    background-size: contain!important;
-   border: none}
+   border: none
+}
+.card-body {
+   background-color: var(--ColorSec-1) ;
+   border: none
+}
+.card-header { border-bottom:none }
 .head-bar {
    font-size:23px;
    font-family: var(--HeaderFont) ;
    font-weight: 800;
    color: var(--ColorTert-1) ;
+   background-color: var(--ColorSec-1) ;
    text-align: center;
    padding-top: 15px;
    letter-spacing: 2px;
    text-transform: lowercase;
    text-transform: capitalize;}
-.skillname {text-transform: uppercase;}
-.skilltable { margin: 10px auto 10px auto }
+.skilltable { margin: 10px auto 10px auto}
 .skilllabel {
    -webkit-transform: rotate(270deg) ;
    -moz-transform: rotate(270deg) ;
    -ms-transform: rotate(270deg) ;
    -o-transform: rotate(270deg) ;
-   transform: rotate(270deg) ;
-}
+   transform: rotate(270deg) ;}
 .copyright-attribution {
    background: var(--ColorPrime) ;
    border: var(--Border-1) ;
    border-width: var(--Border-1-W) ;
    padding: 5px; margin:10px}
 dd,  dt { font-size:8px}
-th, td { padding: 5px 2px;}
-.tabsep { border-bottom: 1px solid var(--MuteColor) }
+th,  td { padding: 5px 2px;}
+.tabsep { border-bottom: 1px solid var(--MuteColor)}
 .box {
    background: var(--ColorSec-1) ;
    border: 3px solid var(--ColorTert-1) ;
@@ -70,12 +76,11 @@ th, td { padding: 5px 2px;}
 hr {
    opacity: 1;
    background: url(https://www.worldanvil.com/uploads/images/d2ea95ce654fda83e4e0b6056a8a8a43.svg) round;
-   border: 0;
+   border: 0!important;
    background-size: contain;
    background-repeat: repeat-x;
    background-position: center;
    height: 25px;}
-.glbl,  th { color: var(--ColorTert-1) ;}
 .lbl,  .txt { padding: 0px 5px;}
 .od {  background-color: #ffffff90!important; padding: 0px 5px;}
 .ev {  background-color: #00000010!important; padding: 0px 5px;}
@@ -86,10 +91,13 @@ hr {
 .c { text-align: center}
 .r { text-align: right}
 .l { text-align: left}
-.fa-solid, .fa-regular { -webkit-text-fill-color: var(--ColorTert-2)!important }
-.rolldice { background-color: var(--ColorTert-2)!important }
-.badge { background-color: transparent; }
+.card-body { padding: 0.5rem}
+.fa-solid,  .fa-regular,  .ra { -webkit-text-fill-color: var(--ColorTert-2)!important}
+.glbl,  th,  .head-bar { color: var(--ColorTert-1)!important ;}
+.rolldice { background-color: var(--ColorTert-2)!important}
+.badge { background-color: transparent;}
 th { background-color: #00000020!important;}
+b { color: var(--ColorTert-1)!important ;}
 textarea.form-control {
    background-color: #e0ded5 !important;
    border: 0px solid #c5c4bb !important;
